feat: support frontend plugins

--- a/src/template.html
+++ b/src/template.html
@@ -8,6 +8,7 @@
     <title>%page_title%</title>
     <link rel="stylesheet" href="/css/pure-min.css" />
     <link rel="stylesheet" href="/css/sidebar.css" />
+    <script type="text/javascript" src="/bundle.js" ></script>
   </head>
   <body>
     <div id="layout">
