feat: localized logo support

--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,7 @@
     <div id="layout">
       <div id="menu">
         <nav class="pure-menu">
-          <a class="pure-menu-heading" href="/">Company</a>
+          <a class="pure-menu-heading" href="/">%logo%</a>
 
           <ul class="pure-menu-list">
             %nav%
