feat: search result styling

--- a/src/template.html
+++ b/src/template.html
@@ -30,14 +30,7 @@
         <div class="content">
           <form class="pure-form">
             <input id="search-bar" type="text" placeholder="%search_text%" />
-            <div id="search-result-container" class="hide">
-              <ol>
-                <li><div><h4>title</h4><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint dolorem quis quas consectetur! Porro sunt assumenda laboriosam consequuntur nulla unde dolores rem rerum soluta, quisquam vitae sed illum adipisci voluptates.</p></div></li>
-                <li><div><h4>title</h4><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint dolorem quis quas consectetur! Porro sunt assumenda laboriosam consequuntur nulla unde dolores rem rerum soluta, quisquam vitae sed illum adipisci voluptates.</p></div></li>
-                <li><div><h4>title</h4><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint dolorem quis quas consectetur! Porro sunt assumenda laboriosam consequuntur nulla unde dolores rem rerum soluta, quisquam vitae sed illum adipisci voluptates.</p></div></li>
-                <li><div><h4>title</h4><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint dolorem quis quas consectetur! Porro sunt assumenda laboriosam consequuntur nulla unde dolores rem rerum soluta, quisquam vitae sed illum adipisci voluptates.</p></div></li>
-              </ol>
-            </div>
+            <div id="search-result-container" class="hide"></div>
           </form>
           <section id="table-of-contents">%table_of_contents%</section>
           %content%
@@ -47,5 +40,6 @@
     </div>
 
     <script src="/js/ui.js"></script>
+    <script type="module" src="/js/search.js" defer></script>
   </body>
 </html>
