feat: better initial logo

--- a/pages/logo.html
+++ b/pages/logo.html
@@ -1,3 +1,14 @@
+<style>
+    .pure-menu-heading{
+        display: flex;
+        align-items: center;
+        gap: .5rem;
+    }
+    .pure-menu-heading img{
+        height: 2rem;
+    }
+</style>
 <a class="pure-menu-heading" href="/">
-    <b>TestCompany</b>
+    <img src="/assets/favicon.svg" />
+    <b>Instant Docs</b>
 </a>
