--- a/src/template.html
+++ b/src/template.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="%meta_description%" />
+    <link rel="icon" href="/assets/favicon.svg">
     <title>%page_title%</title>
     <link rel="stylesheet" href="/css/pure-min.css" />
     <link rel="stylesheet" href="/css/sidebar.css" />
